# BanksDepositRates

./: .gitignore  bank_data.xlsx  banks.xlsx  constants.py  docker-compose.yaml  docker-compose.yml  experement.ipynb  main.py  offers.xlsx  pyproject.toml  requirements.txt  ее.json
airflow_volume/config/: scraper_config.py
airflow_volume/dags/: banks_dag.py
data/: banks.xlsx  offers.xlsx
data_scraper/: main.py
notebooks/: data_getting_sravni.ipynb  experement.ipynb  get_data_from_sravni.ipynb  postgres_injestion.ipynb  project_notes.txt  tg_bot.ipynb
telegram_bot/: constants.py  db.py  main.py  utils.py
