[project]
name = "bank-rates"
version = "0.1.0"
description = "App to check credit rates of russian banks from a sravni ru"
readme = "README.md"
authors = [
    {name = "Vladislav Raskoshinskii", email = "vladrask.ds@gmail.com"}
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.1",
    "openpyxl>=3.0.10",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=0.21.0",
    "telebot>=0.0.5",
]

requires-python = ">=3.10,<4.0" 

[project.urls]
repository = "https://github.com/Aleksey-Asap/BanksDepositRates"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# If using setuptools, make sure this section is correctly defined
[tool.setuptools]
packages = ["data_scraper", "telegram_bot"]
